<resources>
    <string name="app_name">FinalProject</string>
    <string name="news_title">News Title</string>
    <string name="clear_favourites">Clear Favourites</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">Description de l\'article</string>
    <string name="article_date">Article Date</string>
    <string name="view_full_article">View Full Article</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="dark">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="news_app">News App</string>
    <string name="search_news">Search news</string>
    <string name="refresh_news">Refresh</string>
    <string name="help">Help</string>
    <string name="help_message">Instructions on how to use the app.</string>
    <string name="ok">OK</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="remove_favorite_confirmation">Are you sure you want to remove this article from favourites?</string>
    <string name="remove_favorite_title">Remove Favourites</string>
    <string name="no_favorites_message">There are no favorites to delete</string>
    <string name="clear_favorites_title">Clear All Favourites</string>
    <string name="clear_favorites_confirmation">Are you sure you want to delete all favorite articles?</string>
    <string name="article_removed_message">Article removed from favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Français</item>
    </string-array>
</resources>
